# vineyard

./: token.json
back/: .gitignore  README.md  pyproject.toml
back/app/: main.py
back/app/core/: __init__.py  config.py  database.py  logging.py  middlewares.py  security.py
back/app/models/: __init__.py  device.py  device_settings.py  fertilizer_application.py  irrigation.py  report.py  robots.py  sensor.py  sensor_data.py  user.py
back/app/routes/: __init__.py  auth.py  calibration.py  devices.py  diagnostic.py  fertilizer.py  irrigation.py  reports.py  robots.py  sensors.py  settings.py
back/app/schemas/: common.py  device.py  fertilizer.py  irrigation.py  report.py  robots.py  sensor.py  user.py
back/app/services/: __init__.py  auth.py  calibration.py  diagnostic.py  report_service.py  sensor.py  sensor_simulator.py  user.py
back/app/utils/: __init__.py  date.py  formatters.py  validation.py
back/app/websockets/: __init__.py  connection_manager.py  routes.py
back/reports/: report-20250513090028.json  report-20250513091005.json  report-20250513091030.json  report-20250513091047.json  report-20250513091447.json  report-20250513091833.json  report-20250513092123.json  report-20250513092138.json  report-20250513093740.json  report-20250513093815.json  report-20250513094407.json  report-20250513094652.json  report-20250513173217.json  report-20250513173554.json  report-20250513174104.json  report-20250513200302.json  report-20250513201425.json  report-20250513201946.json  report-20250520133338.json
front/: README.md  index.html  package-lock.json  (+2 more)
(+95 files in other folders)
